[DRFT-1039] Fix spacing, font weight (#301)

--- a/src/SmartComponents/Drift/DriftCard.scss
+++ b/src/SmartComponents/Drift/DriftCard.scss
@@ -1,8 +1,7 @@
 // Drift style
 
 .ins-c-drift__drop_down {
-  padding-right: var(--pf-l-flex--spacer--2xl);
-
+  padding-right: var(--pf-global--spacer--xs);
 }
 
 .ins-c-drift__investigate_button {
